--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
+    "firebase": "8.2.3",
     "native-base": "^3.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
