--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-		"publish": "expo publish",
+    "publish": "expo publish",
     "eject": "expo eject",
     "test": "jest --watchAll"
   },
@@ -24,6 +24,8 @@
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
+    "expo-image-manipulator": "^10.1.2",
+    "expo-image-picker": "^11.0.3",
     "expo-linking": "~2.3.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
@@ -34,12 +36,14 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "^0.29.3",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1",
