--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "firebase": "8.2.3",
+    "lodash": "^4.17.21",
     "native-base": "^3.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -38,11 +39,14 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-maps": "^0.29.3",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.13.12",
