--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo": "~42.0.1",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
+    "expo-font": "9.2.1",
     "expo-image-manipulator": "^10.1.2",
     "expo-image-picker": "^11.0.3",
     "expo-linking": "~2.3.1",
@@ -38,16 +38,21 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
+    "react-native-floating-label-input": "^1.3.11",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-gradient-buttons": "^2.0.2",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-maps": "^0.29.3",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-tab-view": "^3.1.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1",
